update Jan 2 Feb

--- a/GFW_List.html
+++ b/GFW_List.html
@@ -1,3 +1,8 @@
+gsa.ac.uk
+shu.ac.uk
+studylink.com
+dropbox.com
+red-dot.org
 core77.com
 asu.edu
 mica.edu
@@ -35,6 +40,7 @@ admissions.risd.edu
 join.rit.edu
 apply.engineering.nyu.edu
 pinterest.com
+mir-s3-cdn-cf.behance.net
 behance.net
 yankodesign.com
 grammarly.com
